# snakesay

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/actions/setup/: action.yaml
.github/workflows/: ci.yaml  code-quality.yaml
src/snakesay/: __init__.py  snake.py
tests/snakesay/: tests_init.py
